hyperstack-macros/tests/ui/validation_errors/invalid_skip_decoders_assignment.rs
use hyperstack_macros::hyperstack;

#[hyperstack(skip_decoders = true)]
mod broken {}

fn main() {}
